--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -522,5 +522,11 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Business card": "Targeta personal"
+    "Contact Us": "Contact Us",
+    "Business card": "Targeta personal",
+    "Teacher profile picture": "Teacher profile picture",
+    "Picture": "Imatge",
+    "Sender profile picture": "Sender profile picture",
+    "Receiver profile picture": "Receiver profile picture",
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
 }
