--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -23,6 +23,7 @@
     "Home": "Home",
     "Title": "Titel",
     "Content": "Inhalt",
+    "Invitees": "Eingeladene",
     "Is it editable by the invitees?": "Is it editable by the invitees?",
     "Field is required": "Field is required",
     "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
@@ -41,7 +42,7 @@
     "Inbox": "Posteingang",
     "Signed in as": "Eingeloggt als",
     "Settings": "Kursinformation \u00e4ndern",
-    "Sign out": "Sign out",
+    "Sign out": "Abmelden",
     "My sessions": "Meine Sitzungen",
     "Events": "Events",
     "My progress": "Mein Fortschritt",
@@ -62,7 +63,7 @@
     "List": "Liste",
     "Edit": "Bearbeiten",
     "Submit": "Absenden",
-    "Send": "Send",
+    "Send": "Senden",
     "Delete": "Lernpfad l\u00f6schen",
     "{resource} created": "{resource} created",
     "{resource} deleted": "{resource} deleted",
@@ -75,9 +76,9 @@
     "From:": "From:",
     "Until:": "Until:",
     "Go to session": "Go to session",
-    "See as student": "See as student",
+    "See as student": "Als Lernender ansehen",
     "Add a course introduction to display to your students": "Add a course introduction to display to your students",
-    "Course introduction": "Course introduction",
+    "Course introduction": "Kurseinf\u00fchrung",
     "Tools": "Werkzeuge",
     "Loading": "Ladevorgang",
     "Course language": "Kurssprache:",
@@ -114,14 +115,14 @@
     "Sent date": "Datum senden",
     "Sent": "Gesendet",
     "Attachments": "Anh\u00e4nge",
-    "You don't have any course content yet.": "You don't have any course content yet.",
-    "You don't have any course yet.": "You don't have any course yet.",
-    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.",
-    "You don't have any session yet.": "You don't have any session yet.",
+    "You don't have any course content yet.": "Sie haben noch keine Kursinhalte.",
+    "You don't have any course yet.": "Sie haben noch keinen Kurs.",
+    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "Gehen Sie zu 'Entdecken', um ein Thema von Interesse zu finden, oder warten Sie, bis jemand Sie abonniert.",
+    "You don't have any session yet.": "Sie haben noch keine Session.",
     "Username": "Benutzername",
     "Password": "Kennwort",
     "Update": "Aktualisierung",
-    "Add a course introduction to display to your students.": "Add a course introduction to show your students.",
+    "Add a course introduction to display to your students.": "F\u00fcgen Sie eine Kurseinf\u00fchrung hinzu, um Ihren Lernenden zu zeigen.",
     "Assessments": "Meine Bewertungsmappe",
     "Assignments": "Ausarbeitungen von Teilnehmern",
     "Videoconference": "Video-Konferenz",
@@ -155,20 +156,20 @@
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
-    "Send diagnostic finalization message": "Send diagnostic finalization message",
-    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
-    "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
+    "Send diagnostic finalization message": "Senden Sie die Abschlussnachricht zur Diagnose",
+    "DiagnosticfinalizationmessageTitle": "Diagnoseabschluss",
+    "DiagnosticfinalizationmessageContent": "Hallo {0}, ich bin {1} und \u00fcberpr\u00fcfe Ihre Diagnose, um den Kurs festzulegen, den Sie belegen werden.",
     "Contact": "Kontakt",
     "Registration": "Selbst-Registrierung",
-    "Current session tab": "Current",
-    "Upcoming session tab": "Upcoming",
-    "Past session tab": "Past",
-    "Sticky courses": "Special courses",
+    "Current session tab": "Aktuell",
+    "Upcoming session tab": "Bevorstehend",
+    "Past session tab": "Vergangen",
+    "Sticky courses": "Spezialkurse",
     "This message was deleted when the user was removed from the platform on %s": "Diese Nachricht wurde gel\u00f6scht, als der Benutzer am {0} von der Plattform entfernt wurde",
-    "My General Certificate": "My General Certificate",
+    "My General Certificate": "Mein allgemeines Zertifikat",
     "My skills": "Meine F\u00e4higkeiten",
     "Social network": "Soziales Netzwerk",
-    "Sessions catalogue": "Sessions catalogue",
+    "Sessions catalogue": "Sessionskatalog",
     "Create your certificate copy-pasting the following tags. They will be replaced in the document by their student-specific value:": "Zertifikat mit diesen Platzhaltern speichern",
     "Your browser does not support Javascript": "Ihr Browser unterst\u00fctzt kein JavaScript",
     "Email reply header": "Am {0} schrieb {1} ({2}):",
@@ -310,7 +311,7 @@
     "Your company short name": "Organisation Name (kurz)",
     "URL of this company": "URL dieser Organisation",
     "Encryption method": "Verschl\u00fcsselungs-Methode",
-    "None": "None",
+    "None": "Keine",
     "Allow self-registration": "Selbstregistration erlaubt",
     "After approval": "Nach Genehmigung",
     "Allow self-registration as a trainer": "Erlauben, sich als Kursleiter zu registrieren",
@@ -327,7 +328,7 @@
     "Step 7 - Update process execution": "Step 7 - Update process execution",
     "Security advice": "Ratschlag zur Sicherheit",
     "Menu": "Men\u00fc",
-    "Created with Chamilo copyright year": "Created with Chamilo \u00a9 {0}",
+    "Created with Chamilo copyright year": "Erstellt mit Chamilo \u00a9 {0}",
     "FAQ": "FAQ",
     "Demo": "Demo",
     "Category name": "Kategorie-Name",
@@ -353,21 +354,24 @@
     "Published": "Ver\u00f6ffentlicht",
     "Draft": "Draft",
     "My friends": "Meine Freunde",
-    "View all friends": "View all friends",
+    "View all friends": "Alle Freunde anzeigen",
     "Search user by geolocalization": "Search user by geolocalization",
+    "My communities": "Meine Gemeinschaften",
+    "See all communities": "Alle Gemeinschaften anzeigen",
     "Skills": "F\u00e4higkeiten",
     "Skills Wheel": "Skills Wheel",
     "Your skill ranking": "Your skill ranking",
     "Without achieved skills": "Keine erworbenen Fertigkeiten",
-    "My profile": "My profile",
+    "My profile": "Mein Profil",
     "Social groups": "Soziale Gruppen",
+    "Promoted messages": "Bef\u00f6rderte Nachrichten",
     "Personal data": "Pers\u00f6nliche Daten",
     "Send message": "Mitteilung senden",
     "Write new comment": "Schreiben Sie einen neuen Kommentar",
     "Post": "Abschicken",
     "The comment is required": "The comment is required",
     "Comments": "Kommentare",
-    "Mark as promoted message": "Mark as promoted message",
+    "Mark as promoted message": "Als Werbenachricht markieren",
     "File upload": "Datei hochladen",
     "What are you thinking about?": "Was denken Sie dar\u00fcber?",
     "Write something to {0}": "Write something to {0}",
@@ -382,6 +386,7 @@
     "Learners": "Teilnehmer",
     "Progress": "Fortschritt",
     "Diagnosis": "Diagnosis",
+    "Add user": "Benutzer hinzuf\u00fcgen",
     "Configure chamilo colors": "Configure chamilo colors",
     "Pick primary color": "Pick primary color",
     "Pick primary color gradient": "Pick primary color gradient",
@@ -413,19 +418,20 @@
     "Value 1": "Value 1",
     "Value 2": "Value 2",
     "Value 3": "Value 3",
-    "Here you can manage registered users within your platform": "Here you can manage registered users within your platform",
-    "User management": "User management",
-    "Create and manage your courses in a simple way": "Create and manage your courses in a simple way",
-    "Course management": "Course management",
-    "Create course packages for a certain time with training sessions": "Create course packages for a certain time with training sessions",
-    "Sessions management": "Sessions management",
-    "Manage the skills of your users, through courses and badges": "Manage the skills of your users, through courses and badges",
-    "View the status of your server, perform performance tests": "View the status of your server, perform performance tests",
+    "Here you can manage registered users within your platform": "Hier k\u00f6nnen Sie registrierte Nutzer auf Ihrer Plattform verwalten",
+    "User management": "Benutzerverwaltung",
+    "Create and manage your courses in a simple way": "Erstellen und verwalten Sie Ihre Kurse auf einfache Weise",
+    "Course management": "Kursverwaltung",
+    "Create course packages for a certain time with training sessions": "Erstellen Sie Kurspakete f\u00fcr einen bestimmten Zeitraum mit Trainingssessions",
+    "Sessions management": "Session-Verwaltung",
+    "Manage the skills of your users, through courses and badges": "Verwalten Sie die F\u00e4higkeiten Ihrer Nutzer durch Kurse und Abzeichen",
+    "Personal data protection": "Sicherheit pers\u00f6nlicher Daten",
+    "View the status of your server, perform performance tests": "\u00dcberpr\u00fcfen Sie den Status Ihres Servers, f\u00fchren Sie Leistungstests durch",
     "Enable version check": "Aktiviere Versions-Check",
-    "Configure your platform, view reports, publish and send announcements globally": "Configure your platform, view reports, publish and send announcements globally",
-    "Platform management": "Platform management",
+    "Configure your platform, view reports, publish and send announcements globally": "Konfigurieren Sie Ihre Plattform, betrachten Sie Berichte, ver\u00f6ffentlichen und senden Sie Ank\u00fcndigungen global",
+    "Platform management": "Plattformverwaltung",
     "Colors": "Farben",
-    "Learn more about Chamilo and its use, official references links": "Learn more about Chamilo and its use, official references links",
+    "Learn more about Chamilo and its use, official references links": "Erfahren Sie mehr \u00fcber Chamilo und dessen Nutzung, offizielle Referenzlinks",
     "Version check enabled": "Versionspr\u00fcfung ist eingeschaltet",
     "Version check": "Check f\u00fcr Version",
     "Hide campus from public platforms list": "Campus nicht auf der \u00f6ffentlichen Liste anzeigen",
@@ -511,13 +517,16 @@
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
     "Personal Data: Introduction": "Personal Data: Introduction",
+    "Personal data we keep about you": "Pers\u00f6nliche Daten, die wir \u00fcber Sie speichern",
     "Terms and Conditions": "Nutzungsbedingungen",
     "Read the Terms and Conditions": "Nutzungsbedingungen lesen",
+    "Permissions you gave us": "Die Berechtigungen, die Sie uns erteilt haben",
     "Legal agreement accepted": "Nutzungsbedingungen akzeptiert",
     "Date": "Datum",
     "Why you want to delete your Legal Agreement": "Why you want to delete your Legal Agreement",
     "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible": "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible",
     "Delete legal agreement": "Rechtliche Vereinbarung l\u00f6schen",
+    "Explain in this box why you want your account deleted": "Erkl\u00e4ren Sie in diesem Feld, warum Sie Ihr Konto l\u00f6schen m\u00f6chten",
     "Delete Account": "Delete Account",
     "Friend request sent successfully": "Friend request sent successfully",
     "Failed to send friend request": "Failed to send friend request",
@@ -531,5 +540,11 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Business card": "Visitenkarte"
+    "Contact Us": "Kontakt",
+    "Business card": "Visitenkarte",
+    "Teacher profile picture": "Teacher profile picture",
+    "Picture": "Bild",
+    "Sender profile picture": "Absenderprofilbild",
+    "Receiver profile picture": "Empf\u00e4ngerprofilbild",
+    "Carbon copy receiver profile picture": "Empf\u00e4ngerprofilbild in Kopie"
 }
