--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -429,5 +429,11 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Business card": "K\u00e4yntikortti"
+    "Contact Us": "Contact Us",
+    "Business card": "K\u00e4yntikortti",
+    "Teacher profile picture": "Teacher profile picture",
+    "Picture": "Kuva",
+    "Sender profile picture": "Sender profile picture",
+    "Receiver profile picture": "Receiver profile picture",
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
 }
