--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -411,5 +411,11 @@
     "Please enter a search query": "Please enter a search query",
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
-    "Search users for friends": "Search users for friends"
+    "Search users for friends": "Search users for friends",
+    "Contact Us": "Contact Us",
+    "Teacher profile picture": "Teacher profile picture",
+    "Picture": "\u0420\u0438\u0441\u0443\u043d\u043e\u043a (\u0444\u043e\u0442\u043e)",
+    "Sender profile picture": "Sender profile picture",
+    "Receiver profile picture": "Receiver profile picture",
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
 }
