--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -542,5 +542,11 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Business card": "Tarjeta personal"
+    "Contact Us": "Contactanos",
+    "Business card": "Tarjeta personal",
+    "Teacher profile picture": "Teacher profile picture",
+    "Picture": "Foto",
+    "Sender profile picture": "Sender profile picture",
+    "Receiver profile picture": "Receiver profile picture",
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
 }
