--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -527,5 +527,11 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Business card": "Biglietto da visita"
+    "Contact Us": "Contact Us",
+    "Business card": "Biglietto da visita",
+    "Teacher profile picture": "Teacher profile picture",
+    "Picture": "Immagine",
+    "Sender profile picture": "Sender profile picture",
+    "Receiver profile picture": "Receiver profile picture",
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
 }
