--- a/assets/locales/yo_NG.json
+++ b/assets/locales/yo_NG.json
@@ -258,5 +258,10 @@
     "Please enter a search query": "Please enter a search query",
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
-    "Search users for friends": "Search users for friends"
+    "Search users for friends": "Search users for friends",
+    "Contact Us": "Contact Us",
+    "Teacher profile picture": "Teacher profile picture",
+    "Sender profile picture": "Sender profile picture",
+    "Receiver profile picture": "Receiver profile picture",
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
 }
