--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -404,5 +404,11 @@
     "Please enter a search query": "Please enter a search query",
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
-    "Search users for friends": "Search users for friends"
+    "Search users for friends": "Search users for friends",
+    "Contact Us": "Contact Us",
+    "Teacher profile picture": "Teacher profile picture",
+    "Picture": "\u5716\u7247",
+    "Sender profile picture": "Sender profile picture",
+    "Receiver profile picture": "Receiver profile picture",
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
 }
