Language: Fix crossed translation terms or terms not picking up

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -546,5 +546,6 @@
     "Picture": "Bild",
     "Sender profile picture": "Absenderprofilbild",
     "Receiver profile picture": "Empf\u00e4ngerprofilbild",
-    "Carbon copy receiver profile picture": "Empf\u00e4ngerprofilbild in Kopie"
+    "Carbon copy receiver profile picture": "Empf\u00e4ngerprofilbild in Kopie",
+    "Explore more courses": "Erkunden Sie weitere Kurse"
 }
