--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -548,5 +548,6 @@
     "Picture": "Picture",
     "Sender profile picture": "Sender profile picture",
     "Receiver profile picture": "Receiver profile picture",
-    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
+    "Explore more courses": "Explore more courses"
 }
