--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -548,5 +548,6 @@
     "Picture": "Foto",
     "Sender profile picture": "Sender profile picture",
     "Receiver profile picture": "Receiver profile picture",
-    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
+    "Explore more courses": "Explorar m\u00e1s cursos"
 }
