--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -548,5 +548,6 @@
     "Picture": "Photo",
     "Sender profile picture": "Photo de profil de l'exp\u00e9diteur",
     "Receiver profile picture": "Photo de profil du destinataire",
-    "Carbon copy receiver profile picture": "Photo de profil du destinataire en copie carbone"
+    "Carbon copy receiver profile picture": "Photo de profil du destinataire en copie carbone",
+    "Explore more courses": "Explorer plus de cours"
 }
