--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -547,5 +547,6 @@
     "Picture": "Slika",
     "Sender profile picture": "Sender profile picture",
     "Receiver profile picture": "Receiver profile picture",
-    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
+    "Explore more courses": "Razi\u0161\u010di ve\u010d te\u010dajev"
 }
