--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -547,5 +547,6 @@
     "Picture": " \u0635\u0648\u0631\u0629",
     "Sender profile picture": "Sender profile picture",
     "Receiver profile picture": "Receiver profile picture",
-    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
+    "Explore more courses": "\u0627\u0633\u062a\u0643\u0634\u0627\u0641 \u0645\u0642\u0631\u0631\u0627\u062a \u0627\u0643\u062b\u0631"
 }
