--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -542,5 +542,6 @@
     "Picture": "\u05ea\u05de\u05d5\u05e0\u05d4",
     "Sender profile picture": "Sender profile picture",
     "Receiver profile picture": "Receiver profile picture",
-    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture"
+    "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
+    "Explore more courses": "\u05d7\u05e7\u05d5\u05e8 \u05e7\u05d5\u05e8\u05e1\u05d9\u05dd \u05e0\u05d5\u05e1\u05e4\u05d9\u05dd"
 }
