Gradebook: Certificate: transform Chamilo LMS to a translation string to be able to adapt the certificate Footer in sublanguages - refs BT#21621

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -50,6 +50,9 @@ msgstr "Badge erstellen"
 msgid "Badges"
 msgstr "Badges"
 
+msgid "Chamilo LMS"
+msgstr "Chamilo LMS"
+
 msgid "Students who acquired skill %s"
 msgstr "Studierende die Fähigkeiten erworben haben %s"
 
