--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -29217,6 +29217,9 @@ msgstr "a obtenu les compétences suivantes "
 msgid "Certificate Footer"
 msgstr ""
 
+msgid "Chamilo LMS"
+msgstr "Chamilo LMS"
+
 msgid "No course session for this user"
 msgstr "Pas de cours de session pour cet utilisateur"
 
