Language: Fix missing translations for roles

--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -27645,3 +27645,6 @@ msgstr "Dialog example"
 
 msgid "Some more elements"
 msgstr "Some more elements"
+
+msgid "Student boss"
+msgstr "Student boss"
