Language: Update Vue translations

--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -341,7 +341,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Moure dalt",
     "Move down": "Moure baix",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Ha oblidat la seva contrasenya?",
     "Enabled": "Activat",
     "Locale": "Locale",
     "My Files": "My Files",
