--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -346,7 +346,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Nach oben verschieben",
     "Move down": "Nach unten verschieben",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Passwort vergessen?",
     "Enabled": "aktiviert",
     "Locale": "Locale",
     "My Files": "My Files",
