--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -346,7 +346,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Mover arriba",
     "Move down": "Mover abajo",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "\u00bfHa olvidado su contrase\u00f1a?",
     "Enabled": "Activado",
     "Locale": "Locale",
     "My Files": "My Files",
