--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -329,7 +329,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Eraman gora",
     "Move down": "Eraman behera",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Ahaztu al duzu pasahitza?",
     "Enabled": "Aktibaturik",
     "Locale": "Locale",
     "My Files": "My Files",
