--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -304,7 +304,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "\u062d\u0631\u06a9\u062a \u0628\u0647 \u0628\u0627\u0644\u0627",
     "Move down": "\u062d\u0631\u06a9\u062a \u0628\u0647 \u067e\u0627\u06cc\u06cc\u0646",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "\u06a9\u0644\u0645\u0647 \u0639\u0628\u0648\u0631 \u062e\u0648\u062f \u0631\u0627 \u0641\u0631\u0627\u0645\u0648\u0634 \u06a9\u0631\u062f\u0647 \u0627\u06cc\u062f\u061f",
     "Enabled": "\u0641\u0639\u0627\u0644 \u0634\u062f\u0647",
     "Locale": "Locale",
     "My Files": "My Files",
