--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -343,7 +343,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Su",
     "Move down": "Gi\u00f9",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Password dimenticata?",
     "Enabled": "Attivato",
     "Locale": "Locale",
     "My Files": "My Files",
