--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -324,7 +324,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "P\u0101rvietot uz aug\u0161u",
     "Move down": "P\u0101rvietot uz leju",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Aizmirs\u0101t savu paroli?",
     "Enabled": "Iesl\u0113gts",
     "Locale": "Locale",
     "My Files": "My Files",
