--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -336,7 +336,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Verplaats naar boven",
     "Move down": "Verplaats naar beneden",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Wachtwoord vergeten?",
     "Enabled": "Ingeschakeld",
     "Locale": "Locale",
     "My Files": "My Files",
