--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -328,7 +328,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Przenie\u015b wy\u017cej",
     "Move down": "Przenie\u015b ni\u017cej",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Nie pami\u0119tasz has\u0142a?",
     "Enabled": "W\u0142\u0105czone",
     "Locale": "Locale",
     "My Files": "My Files",
