--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -332,7 +332,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Mover para cima",
     "Move down": "Mover para baixo",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Esqueceu-se da sua senha/password ?",
     "Enabled": "Ativado",
     "Locale": "Locale",
     "My Files": "My Files",
