--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -336,7 +336,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Muta mai sus",
     "Move down": "Muta mai jos",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "\u00bfAti uitat pinul?",
     "Enabled": "Activat",
     "Locale": "Locale",
     "My Files": "My Files",
