--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -339,7 +339,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Posun hore",
     "Move down": "Posun dole",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Zabudli ste heslo?",
     "Enabled": "Povolen\u00fd",
     "Locale": "Locale",
     "My Files": "My Files",
