--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -346,7 +346,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Premakni gor",
     "Move down": "Premakni dol",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Si pozabil(a) geslo ?",
     "Enabled": "Omogo\u010deno",
     "Locale": "Locale",
     "My Files": "My Files",
