--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -239,7 +239,7 @@
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
     "Toggle visibility": "Toggle visibility",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Zaboravili ste lozinku?",
     "Locale": "Locale",
     "My Files": "My Files",
     "Draft": "Draft",
