--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -207,7 +207,7 @@
     "Link is not valid": "Link is not valid",
     "Check link": "Tingnan ang link",
     "Toggle visibility": "Toggle visibility",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Nakalimutan ang iyong password ?",
     "Locale": "Locale",
     "My Files": "My Files",
     "Draft": "Draft",
