--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -293,7 +293,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Mover pa enriba",
     "Move down": "Mover pa embaxo",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "\u00bfEscaeciste la contrase\u00f1a?",
     "Locale": "Locale",
     "My Files": "My Files",
     "Draft": "Draft",
