--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -303,7 +303,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "\u041f\u0440\u0435\u043c\u0435\u0441\u0442\u0432\u0430\u043d\u0435 \u043d\u0430\u0433\u043e\u0440\u0435",
     "Move down": "\u041f\u0440\u0435\u043c\u0435\u0441\u0442\u0432\u0430\u043d\u0435 \u043d\u0430\u0434\u043e\u043b\u0443",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "\u0417\u0430\u0431\u0440\u0430\u0432\u0435\u043d\u0430 \u043f\u0430\u0440\u043e\u043b\u0430?",
     "Enabled": "\u0420\u0430\u0437\u0440\u0435\u0448\u0435\u043d",
     "Locale": "Locale",
     "My Files": "My Files",
