--- a/assets/locales/el.json
+++ b/assets/locales/el.json
@@ -338,7 +338,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Move up",
     "Move down": "Move down",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "\u039e\u03b5\u03c7\u03ac\u03c3\u03b1\u03c4\u03b5 \u03c4\u03bf\u03bd \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc \u03c3\u03b1\u03c2?",
     "Enabled": "Enabled",
     "Locale": "Locale",
     "My Files": "My Files",
