--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -266,7 +266,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "Siirr\u00e4 yl\u00f6s",
     "Move down": "Siirr\u00e4 alas",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Unohditko salasanasi?",
     "Locale": "Locale",
     "My Files": "My Files",
     "Draft": "Draft",
