--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -346,7 +346,7 @@
     "Toggle visibility": "Toggle visibility",
     "Move up": "D\u00e9placer vers le haut",
     "Move down": "D\u00e9placer vers le bas",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "Mot de passe oubli\u00e9 ?",
     "Enabled": "Activ\u00e9",
     "Locale": "Locale",
     "My Files": "My Files",
