--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -257,7 +257,7 @@
     "Link is valid": "Link is valid",
     "Link is not valid": "Link is not valid",
     "Toggle visibility": "Toggle visibility",
-    "Forgot your password?": "Forgot your password?",
+    "Forgot your password?": "\u015eifrenizi mi unuttunuz ?",
     "Locale": "Locale",
     "My Files": "My Files",
     "Draft": "Draft",
